--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
@@ -330,7 +330,7 @@
             android:gravity="center_horizontal"
             android:orientation="vertical"
             android:splitMotionEvents="false"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/textViewOr"
@@ -346,15 +346,15 @@
                 android:layout_height="@dimen/button_height"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="25px"
-                android:background="@drawable/background_white_rounded_orange_bordered"
+                android:background="@drawable/green_btn_selector"
                 android:gravity="center"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="35px"
-                    android:layout_height="26px"
+                    android:layout_width="50px"
+                    android:layout_height="50px"
                     android:layout_marginRight="16px"
-                    android:src="@drawable/miss_call_icon"
+                    android:src="@drawable/call_icon"
                     android:tag="mwar" />
 
                 <TextView
@@ -363,8 +363,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/miss_call_otp"
                     android:textAllCaps="true"
-                    android:textColor="@color/red_v2"
-                    android:textSize="@dimen/text_size_30" />
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/text_size_32" />
             </LinearLayout>
 
 
