--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_splash_signup.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_splash_signup.xml
@@ -18,7 +18,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="646px"
+                android:layout_height="584px"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="30px"
                 android:layout_marginRight="30px"
@@ -130,11 +130,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="2px"
                     android:layout_margin="2px"
+                    android:visibility="gone"
                     android:src="@color/grey_light"/>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:layout_weight="1">
 
                     <ImageView
@@ -171,11 +173,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="2px"
                     android:layout_margin="2px"
+                    android:visibility="visible"
                     android:src="@color/grey_light"/>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:layout_weight="1">
 
                     <ImageView
@@ -211,6 +215,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="2px"
                     android:layout_margin="2px"
+                    android:visibility="gone"
                     android:src="@color/grey_light"/>
 
                 <RelativeLayout
@@ -395,10 +400,10 @@
                 android:layout_height="97px"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="40px"
-                android:background="@drawable/button_theme_alpha_white_stroke_selector"
+                android:background="@drawable/button_white_selector"
                 android:text="@string/sign_up"
                 android:textAllCaps="true"
-                android:textColor="@color/white"
+                android:textColor="@color/red_v2"
                 android:textSize="@dimen/text_size_34"/>
 
 
