--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_documents.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_documents.xml
@@ -16,6 +16,7 @@
         android:orientation="vertical">
 
         <RelativeLayout
+            android:id="@+id/relativeLayoutSelectPicture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="24px"
