--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -73,9 +73,9 @@
 
                         <TextView
                             android:id="@+id/userName"
-                            android:layout_width="wrap_content"
+                            android:layout_width="260px"
                             android:layout_height="wrap_content"
-                            android:text="Dr"
+                            android:text="@string/NA"
                             android:textColor="@color/white"
                             android:textSize="34px"/>
 
