--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_otp_confrim.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_otp_confrim.xml
@@ -241,6 +241,7 @@
                 android:textSize="32px" />
 
             <ImageView
+                android:id="@+id/btnOtpViaCall"
                 android:layout_width="120px"
                 android:layout_height="120px"
                 android:layout_marginTop="20px"
