--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -19,6 +19,7 @@
             android:orientation="horizontal"
             android:background="@color/red_status"
             android:layout_below="@+id/topBar"
+            android:visibility="visible"
             >
             <TextView
                 android:id="@+id/tour_textView"
@@ -40,6 +41,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="18px"
                 android:layout_centerVertical="true"
+                android:src="@drawable/ic_cross_et_pressed"
                 />
 
         </RelativeLayout>
