--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -36,12 +36,13 @@
 
             <ImageView
                 android:id="@+id/cross_tour"
-                android:layout_width="36px"
-                android:layout_height="36px"
+                android:layout_width="50px"
+                android:layout_height="50px"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="18px"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_cross_et_pressed"
+                android:padding="8px"
+                android:src="@drawable/ic_tutorial_cross"
                 />
 
         </RelativeLayout>
