--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_tour.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_tour.xml
@@ -28,11 +28,12 @@
 
         <ImageView
             android:id="@+id/cross_tour"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:padding="4dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_cross_et_pressed"
+            android:src="@drawable/ic_tutorial_cross"
             android:layout_marginRight="9dp" />
 
     </RelativeLayout>
