--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_otp_confrim.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_otp_confrim.xml
@@ -229,7 +229,7 @@
             android:gravity="center_horizontal"
             android:orientation="vertical"
             android:splitMotionEvents="false"
-            android:visibility="visible">
+            android:visibility="gone">
 
 
             <TextView
@@ -264,6 +264,16 @@
 
 
     </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/relativeLayoutFake"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="@color/black">
+
+
+    </RelativeLayout>
 
 
 </RelativeLayout>
