--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_self_enroll_custom_camera.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_self_enroll_custom_camera.xml
@@ -22,7 +22,7 @@
 
         <TextView
             android:id="@+id/titleAutoSide"
-            android:layout_width="wrap_content"
+            android:layout_width="590px"
             android:layout_height="wrap_content"
             android:layout_below="@+id/relativeLayoutProgressBar"
             android:layout_centerInParent="true"
