--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
@@ -10,6 +10,7 @@
         android:id="@+id/topRl"
         android:layout_width="match_parent"
         android:layout_height="90px"
+        android:visibility="gone"
         android:background="@color/black_top_bar_bg"
         android:splitMotionEvents="false">
 
@@ -46,6 +47,7 @@
         android:orientation="vertical"
         android:splitMotionEvents="false"
         android:visibility="visible"
+        android:layout_below="@+id/topRl"
         android:layout_alignParentBottom="true">
 
         <LinearLayout
