--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
@@ -10,7 +10,7 @@
         android:id="@+id/topRl"
         android:layout_width="match_parent"
         android:layout_height="90px"
-        android:visibility="gone"
+        android:visibility="visible"
         android:background="@color/black_top_bar_bg"
         android:splitMotionEvents="false">
 
