--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_one_button.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_one_button.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal"
         android:background="@color/red_status"
         android:layout_below="@+id/topBar"
-        android:visibility="gone"
+        android:visibility="visible"
         >
         <TextView
             android:id="@+id/tour_textView"
@@ -31,12 +31,13 @@
 
         <ImageView
             android:id="@+id/cross_tour"
-            android:layout_width="36px"
-            android:layout_height="36px"
+            android:layout_width="50px"
+            android:layout_height="50px"
             android:layout_alignParentRight="true"
             android:layout_marginRight="18px"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_cross_et_pressed"
+            android:padding="8px"
+            android:src="@drawable/ic_tutorial_cross"
             />
 
     </RelativeLayout>
