merge_branch_272: 272 beta changes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_two_buttons_tour.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_two_buttons_tour.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal"
         android:background="@color/red_status"
         android:layout_below="@+id/topBar"
-        android:visibility="visible"
+        android:visibility="gone"
     >
         <TextView
             android:id="@+id/tour_textView"
