--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_one_button.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_one_button.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal"
         android:background="@color/red_status"
         android:layout_below="@+id/topBar"
-        android:visibility="visible"
+        android:visibility="gone"
         >
         <TextView
             android:id="@+id/tour_textView"
