feature_arriving_btn_UI: vendor to Merchant

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_delivery_info_list.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_delivery_info_list.xml
@@ -81,7 +81,7 @@
         android:layout_height="98px"
         android:textSize="32px"
         android:visibility="gone"
-        android:text="message from vendor"
+        android:text="message from Merchant"
         android:gravity="center"/>
 
     <ImageView
