--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -428,7 +428,7 @@
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@+id/imageViewDocIcon"
                     android:layout_marginLeft="8px"
-                    android:text="@string/upload_Documents"
+                    android:text="@string/driver_resources"
                     android:textColor="@color/white"
                     android:textSize="36px"/>
 
