--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request_new.xml
@@ -21,14 +21,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="420px"
+                android:layout_width="442px"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textViewRequestName"
@@ -72,6 +70,14 @@
                     android:textSize="@dimen/text_size_30"
                     />
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+
                 <com.github.lzyzsd.circleprogress.DonutProgress
                     android:id="@+id/donut_progress"
                     android:layout_width="105px"
@@ -84,80 +90,6 @@
                     custom:donut_show_text="false"
                     custom:donut_unfinished_stroke_width="5px"/>
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
-
-                <ImageView
-                    android:id="@+id/imageViewRequestType"
-                    android:layout_width="80px"
-                    android:layout_height="80px"
-                    android:src="@drawable/ic_delivery_request"
-                    android:tag="mwar"
-                    android:visibility="visible"/>
-
-                <TextView
-                    android:id="@+id/textViewRequestFareFactor"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="10px"
-                    android:singleLine="true"
-                    android:text="Rate: 1.42x"
-                    android:textColor="@color/bg_grey_opaque"
-                    android:textSize="34px"
-                    android:visibility="visible"
-                    />
-
-                <LinearLayout
-                    android:id="@+id/linearLayoutDeliveryFare"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginTop="10px"
-                    android:visibility="visible"
-                    >
-
-                    <TextView
-                        android:id="@+id/textViewEstimatedFareValue"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/text_size_34"
-                        android:textColor="@color/text_color"
-                        android:text="Rs. 000 - 000"/>
-
-                    <TextView
-                        android:id="@+id/textViewEstimatedFare"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/text_size_18"
-                        android:textColor="@color/text_color"
-                        android:text="@string/estimated_fare"/>
-
-                    <TextView
-                        android:id="@+id/textViewDeliveryFare"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Rs. 0"
-                        android:layout_marginTop="10px"
-                        android:textColor="@color/text_color"
-                        android:textSize="@dimen/text_size_30"/>
-
-                    <TextView
-                        android:id="@+id/textViewDeliveryApprox"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/text_size_18"
-                        android:textColor="@color/text_color"
-                        android:text="@string/approx"/>
-
-                </LinearLayout>
-
-
                 <TextView
                     android:id="@+id/textViewRequestDistance"
                     android:layout_width="match_parent"
@@ -167,11 +99,89 @@
                     android:layout_marginTop="8px"
                     android:textColor="@color/text_color"
                     android:textSize="31px"
-                    />
+                />
 
             </LinearLayout>
 
         </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+        >
+
+            <ImageView
+                android:id="@+id/imageViewRequestType"
+                android:layout_width="80px"
+                android:layout_height="80px"
+                android:src="@drawable/ic_delivery_request"
+                android:tag="mwar"
+                android:visibility="visible"/>
+
+            <TextView
+                android:id="@+id/textViewRequestFareFactor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10px"
+                android:singleLine="true"
+                android:text="Rate: 1.42x"
+                android:textColor="@color/bg_grey_opaque"
+                android:textSize="34px"
+                android:visibility="visible"
+            />
+
+            <LinearLayout
+                android:id="@+id/linearLayoutDeliveryFare"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="10px"
+                android:visibility="visible"
+            >
+
+                <TextView
+                    android:id="@+id/textViewEstimatedFareValue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_size_34"
+                    android:textColor="@color/text_color"
+                    android:text="Rs. 000 - 000"/>
+
+                <TextView
+                    android:id="@+id/textViewEstimatedFare"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_size_18"
+                    android:textColor="@color/text_color"
+                    android:text="@string/estimated_fare"/>
+
+                <TextView
+                    android:id="@+id/textViewDeliveryFare"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Rs. 0"
+                    android:layout_marginTop="10px"
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/text_size_30"/>
+
+                <TextView
+                    android:id="@+id/textViewDeliveryApprox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_size_18"
+                    android:textColor="@color/text_color"
+                    android:text="@string/approx"/>
+
+            </LinearLayout>
+
+
+
+
+        </LinearLayout>
+
 
         <RelativeLayout
             android:layout_width="match_parent"
