--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_documents.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_documents.xml
@@ -62,6 +62,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="15px"
+            android:layout_marginTop="4px"
             android:background="@drawable/orange_btn_selector"
             android:text="@string/Submit"
             android:textColor="@drawable/white_color_selector"
